--- a/flight/static/css/search2_style.css
+++ b/flight/static/css/search2_style.css
@@ -1,88 +1,3 @@
-/*.section1{
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-}
-
-.white{
-    color: white;
-    font-size: large;
-}
-.white-2{
-    font-size: medium;
-}
-.v-line{
-    border-left: 1px dashed rgba(255, 255, 255, .9);
-    height: 100%;
-    margin: 0px 15px;
-}
-.small-label{
-    font-size: .7em;
-    color: rgb(240, 240, 240);
-}
-
-.query-data-div{
-    min-height: 11vh;
-    background-color: crimson;
-    background-image: linear-gradient(135deg, crimson, #b8017b);
-    display: flex;
-}
-.query-data-div > .container{
-    display: flex;
-    height: 90%;
-    margin-top: auto;
-    margin-bottom: auto;
-    border-radius: 8px;
-}
-.query-data-div > .container > div{
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-}
-.trip-places > div{
-    padding-left: 8px !important;
-    padding-right: 8px !important;
-}
-.trip-time > div{
-    padding-left: 8px !important;
-    padding-right: 8px !important;
-}
-.trip-places{
-    flex: 1;
-    overflow: hidden;
-    min-width: 33%;
-}
-.trip-time, .trip-class{
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.trip-modify{
-    padding-left: 12px;
-    padding-right: 12px;
-}
-.spl-btn{
-    transition-duration: .2s;
-    color: white;
-    border-color: white;
-}*/
-
-
-/*Already in comment below code*//***********************************/
-/*.trip-modify button:hover, button:active, button:focus{
-    background-color: rgba(220,53,69,.1);
-}*/
-/*Already in comment above code*//***********************************/
-
-
-/*
-.trip-modify button:hover, button:active{
-    background-color: rgb(255, 235, 245);
-    color: rgb(189, 4, 116);
-}
-.trip-modify button:focus{
-    box-shadow: 0 0 0 0.2rem rgba(255,255,255,.3);
-}*/
-
 .query-result-div, .query-result-div-2{
     flex: 1;
     background-color: #fff;
@@ -153,10 +68,8 @@
 .each-flight-div{
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px;/*
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);*/
-}
+    padding: 15px 20px;}
+
 .each-flight-div-box{
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
@@ -260,27 +173,6 @@
   }
 
 
-/*.flight-stops-seperator{
-    border-top: 2px solid #979797;
-    width: 50px;
-    height: 2px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 0;
-    bottom: 0;
-    z-index: 1;
-}
-.flight-stops-disc{
-    width: 6px;
-    height: 6px;
-    border: 1px solid #000;
-    display: inline-block;
-    background-color: #fff;
-    position: relative;
-    z-index: 2;
-}*/
 .flight-details-btn{
     display: flex;
     flex: 1;
@@ -293,15 +185,13 @@
 .sort-div{
     display: flex;
     justify-content: space-between;
-    /*margin-left: 20px;
-    margin-right: 150px;*/
+
     padding-left: 20px;
     padding-right: 20px;
     font-size: .9em;
 }
 .sort-arrive, .sort-depart{
-    /*margin-left: 34px;
-    margin-right: 4px;*/
+
     text-align: center;
 }
 .sort-price{
@@ -316,13 +206,6 @@
     font-size: .8em;
 }
 
-
-/*.show{
-    display: block;
-}
-.hide{
-    display: none;
-}*/
 
 .query-data-div2 > .container{
     display: flex;
@@ -349,7 +232,6 @@
 .close-filter .b2{
     padding: 0;
     width: 100%;
-    padding: .375rem .75rem;
 }
 .close-filter button:focus, button:active{
     box-shadow: none;
