Refactor CSS and HTML code

--- a/flight/templates/flight/login.html
+++ b/flight/templates/flight/login.html
@@ -9,7 +9,7 @@
 {% block body %}
     <div class="user-box">
         <div>
-                <img src="{% static 'img/icon_logo.png' %}" height="35em" style="margin-bottom: 2vh;">
+                <img src="{% static 'img/icon_logo.png' %}" height="35em" style="margin-bottom: 2vh;" alt="logo">
                 <h3>Log in to Flight</h3><br>
         </div>
     
