--- a/flight/templates/flight/index.html
+++ b/flight/templates/flight/index.html
@@ -95,7 +95,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Italy'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/1.png' %}" alt="">
+                            <img src="{% static 'img/destination/1.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">Italy</a>
@@ -105,7 +105,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Brazil'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/2.png' %}" alt="">
+                            <img src="{% static 'img/destination/2.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">Brazil</a>
@@ -115,7 +115,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_United_States'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/3.png' %}" alt="">
+                            <img src="{% static 'img/destination/3.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">America</a>
@@ -125,7 +125,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Nepal'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/4.png' %}" alt="">
+                            <img src="{% static 'img/destination/4.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">Nepal</a>
@@ -135,7 +135,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_Maldives'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/5.png' %}" alt="">
+                            <img src="{% static 'img/destination/5.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">Maldives</a>
@@ -145,7 +145,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Indonesia'">
                         <div class="thumb">
-                            <img src="{% static 'img/destination/6.png' %}" alt="">
+                            <img src="{% static 'img/destination/6.png' %}" alt="destination">
                         </div>
                         <div class="content">
                             <a href="#">Indonesia</a>
