--- a/flight/templates/flight/payment.html
+++ b/flight/templates/flight/payment.html
@@ -15,7 +15,7 @@
                     <div class="payment-box-head">
                         <h5>Payment Details</h5>
                         <div class="display-td">
-                            <img class="card-img" src="{% static 'img/card.png' %}">
+                            <img class="card-img" src="{% static 'img/card.png' %}" alt="card">
                         </div>
                     </div>
                 </div>
