Update user authentication fields to use ID instead of username; add email confirmation on ticket booking

--- a/flight/templates/flight/index.html
+++ b/flight/templates/flight/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="row popular_destinations">
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Italy'">
+                    <div class="single_destination w-75 mx-auto" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Italy'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/1.png' %}" alt="destination">
                         </div>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Brazil'">
+                    <div class="single_destination w-75 mx-auto" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Brazil'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/2.png' %}" alt="destination">
                         </div>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_United_States'">
+                    <div class="single_destination w-75 mx-auto" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_United_States'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/3.png' %}" alt="destination">
                         </div>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Nepal'">
+                    <div class="single_destination w-75 mx-auto"  onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Nepal'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/4.png' %}" alt="destination">
                         </div>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_Maldives'">
+                    <div class="single_destination w-75 mx-auto" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_the_Maldives'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/5.png' %}" alt="destination">
                         </div>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <div class="single_destination" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Indonesia'">
+                    <div class="single_destination w-75 mx-auto" onclick="window.location.href = 'https://en.wikipedia.org/wiki/Tourism_in_Indonesia'">
                         <div class="thumb">
                             <img src="{% static 'img/destination/6.png' %}" alt="destination">
                         </div>
