--- a/flight/templates/flight/register.html
+++ b/flight/templates/flight/register.html
@@ -33,7 +33,7 @@
             </div>
             </div>
             <div class="form-group">
-                <input class="form-control inp usrname" type="text" name="username" placeholder="Username *" autocomplete="off">
+                <input class="form-control inp usrname" type="text" name="id" placeholder="C.C *" autocomplete="off">
                 <span class="star small">{{message}}</span>
             </div>
             <div class="form-group">
