--- a/flight/static/css/favorites.css
+++ b/flight/static/css/favorites.css
@@ -1,15 +1,21 @@
 /* flight/static/css/favorites.css */
+.container-table {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 table {
-    width: 100%;
+    width: 90%;
     border-collapse: collapse;
-    margin: 20px 0;
-    font-family: Arial, sans-serif;
-    min-height: 90vh;
+    margin: 30px 0;
+    min-height: 70vh;
 }
 
 thead tr {
-    background-color: #dc3545;
+    background-color: crimson;
+    background-image: linear-gradient(135deg, crimson, #b8017b);
     color: white;
     text-align: left;
 }
@@ -39,7 +45,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #b8017b;
 }
 
 textarea {
