--- a/flight/static/css/layout_style.css
+++ b/flight/static/css/layout_style.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0px;
     padding: 0px;
     font-family: "Rubik", sans-serif;
@@ -6,146 +6,172 @@ body{
     font-style: normal;
     min-width: 250px;
 }
-.container-fluid{
+
+.container-fluid {
     padding-left: 0px;
     padding-right: 0px;
 }
-.dropdown-menu{
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+
+.dropdown-menu {
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
-.navbar{
+
+.navbar {
     padding: .7rem 1.2rem;
     background-color: #fff;
     transition-duration: .2s;
 }
-.nav-link:hover{
-    color: #e12323!important;
+
+.nav-link:hover {
+    color: #e12323 !important;
     transition-duration: .2s;
 }
-.my-account .dropdown-header{
+
+.my-account .dropdown-header {
     align-content: flex-start;
 }
 
-.section{
+.section {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 30px 50px;
     min-height: 100vh;
 }
-.first-section{
+
+.first-section {
     display: flex;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
 }
 
-.banner-div{
+.banner-div {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-right: 15px;
 }
-.banner-text{
+
+.banner-text {
     color: white;
     font-size: 54px;
-    font-family: Georgia, 'Times New Roman', Times, serif!important;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
     font-weight: 700;
     text-align: left;
-    text-shadow: 0px 0px 8px rgba(255,255,255,0.2);
+    text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.2);
 }
 
-@media (max-width: 992px){
-    .first-section{
+@media (max-width: 992px) {
+    .first-section {
         display: block;
     }
-    .banner-text{
+
+    .banner-text {
         text-align: center;
         font-size: 50px;
         margin-top: 20px;
         margin-bottom: 20px;
     }
-    .search-flight{
-        width: 80%!important;
+
+    .search-flight {
+        width: 80% !important;
         margin-left: auto;
         margin-right: auto;
     }
 }
-@media (max-width: 768px){
-    .banner-text{
+
+@media (max-width: 768px) {
+    .banner-text {
         font-size: 40px;
         margin-top: 40px;
         margin-bottom: 45px;
     }
-    .search-flight{
-        width: 85%!important;
+
+    .search-flight {
+        width: 85% !important;
     }
 }
-@media (max-width: 652px){
-    .search-flight{
-        width: 99%!important;
+
+@media (max-width: 652px) {
+    .search-flight {
+        width: 99% !important;
     }
 }
-@media (max-width: 576px){
-    .section{
+
+@media (max-width: 576px) {
+    .section {
         padding: 30px 30px;
     }
-    .search-flight{
-        width: 100%!important;
+
+    .search-flight {
+        width: 100% !important;
         padding: 40px 30px !important;
     }
 }
-@media (max-width: 430px){
-    .search-flight{
+
+@media (max-width: 430px) {
+    .search-flight {
         padding: 35px 18px !important;
     }
 }
-@media (max-width: 376px){
-    .section{
+
+@media (max-width: 376px) {
+    .section {
         padding: 30px 1px;
     }
-    .banner-text{
+
+    .banner-text {
         font-size: 35px;
         margin-top: 15px;
         margin-bottom: 25px;
     }
-    .search-flight{
+
+    .search-flight {
         padding: 35px 10px !important;
     }
-    .footer-content{
-        display: block!important;
+
+    .footer-content {
+        display: block !important;
     }
-    .logo-container{
+
+    .logo-container {
         display: flex;
         justify-content: center;
     }
-    .quote-container{
+
+    .quote-container {
         text-align: center;
         margin-bottom: 15px;
     }
-    .quote{
-        font-size: 1.1em!important;
+
+    .quote {
+        font-size: 1.1em !important;
     }
-    .quote-by{
+
+    .quote-by {
         text-align: center;
     }
-    .links-container{
+
+    .links-container {
         margin-bottom: 15px;
     }
-    .link-list{
-        margin-left: auto!important;
-        margin-right: auto!important;
+
+    .link-list {
+        margin-left: auto !important;
+        margin-right: auto !important;
         text-align: center;
     }
 }
-@media (max-width: 280px){
-    .search-flight{
+
+@media (max-width: 280px) {
+    .search-flight {
         padding: 30px 0px !important;
     }
 }
 
-.search-flight{
+.search-flight {
     padding: 50px 40px;
     background-color: #fff;
     width: 40%;
@@ -153,36 +179,41 @@ body{
     box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px, rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
     display: flex;
 }
-.search-flight .input-row{
+
+.search-flight .input-row {
     margin: 10px;
 }
-.search-flight .input-row label{
+
+.search-flight .input-row label {
     margin-bottom: 0;
     font-size: .9em;
-    color: rgb(100,100,100);
+    color: rgb(100, 100, 100);
 }
-.search-flight button[type="submit"]{
+
+.search-flight button[type="submit"] {
     margin-top: 10px;
 }
-.search-flight .dropdown-menu{
+
+.search-flight .dropdown-menu {
     top: auto;
     left: auto;
 }
 
 
-.second-section .section_title{
+.second-section .section_title {
     margin-top: 25px;
     margin-bottom: 45px;
 }
 
-.single_destination{
+.single_destination {
     margin-bottom: 30px;
     border-radius: 5px;
     overflow: hidden;
     transition: 0.3s;
     position: relative;
 }
-.single_destination::before{
+
+.single_destination::before {
     background: linear-gradient(to bottom, rgba(4, 14, 39, 0) 0%, rgba(4, 14, 39, 0.7) 100%);
     content: '';
     left: 0;
@@ -192,21 +223,25 @@ body{
     z-index: 2;
     position: absolute;
 }
-.single_destination:hover{
+
+.single_destination:hover {
     transform: translateY(-10px);
-    box-shadow: 0 12px 15px rgba(0,0,0,.2);
+    box-shadow: 0 12px 15px rgba(0, 0, 0, .2);
     cursor: pointer;
 }
-.single_destination .thumb img{
+
+.single_destination .thumb img {
     width: 100%;
 }
-.single_destination .content{
+
+.single_destination .content {
     position: absolute;
     left: 30px;
     bottom: 30px;
     z-index: 7;
 }
-.single_destination .content a{
+
+.single_destination .content a {
     margin-bottom: 0;
     font-size: 22px;
     color: #fff;
@@ -214,59 +249,70 @@ body{
     transition: 0.3s;
     text-decoration: none;
 }
-.single_destination:hover content a{
+
+.single_destination:hover content a {
     background-color: red;
 }
 
-footer{
-    background-color: rgb(255,242,242);
+footer {
+    background-color: rgb(255, 242, 242);
     margin-top: 0px;
     padding-top: 1px;
 }
-footer .container > div{
+
+footer .container>div {
     font-family: Barlow, sans-serif;
     margin: 48px 0px 10px;
     flex-shrink: 0;
     max-width: 100%;
     overflow: hidden;
 }
-.footer-content{
+
+.footer-content {
     padding-top: 20px;
     display: flex;
     -webkit-box-pack: justify;
     justify-content: space-between;
 }
-.links-container{
+
+.links-container {
     text-align: left;
     flex-direction: row;
     display: flex;
 }
-.quote-container{
+
+.quote-container {
     text-align: right;
 }
-.logo-container img{
+
+.logo-container img {
     width: 130px;
 }
-.links-container > div{
+
+.links-container>div {
     flex: 1 0 0px;
 }
-.links-container > div ul{
+
+.links-container>div ul {
     padding-inline-start: 0px;
     margin-block-start: 0px;
     margin-block-end: 0px;
     list-style-type: none;
     margin-right: 50px;
 }
-.footer-links{
+
+.footer-links {
     white-space: nowrap;
     color: rgb(31, 31, 31);
     text-decoration: underline solid rgb(255, 255, 255);
     transition: all 0.1s ease 0s;
 }
-.footer-links:hover{
+
+.footer-links:hover {
     color: rgb(31, 31, 31);
 }
-.quote-container .quote{
+
+.quote-container .quote {
     font-family: utopia-std, serif;
     text-align: center;
     color: rgb(26, 26, 26);
@@ -276,11 +322,13 @@ footer .container > div{
     font-weight: 600;
     line-height: 1.6;
 }
-.quote-container .quote-by{
+
+.quote-container .quote-by {
     font-family: sans-serif;
     font-size: 15px;
 }
-.social-icons{
+
+.social-icons {
     list-style-type: none;
     display: flex;
     margin: 0px auto;
@@ -289,12 +337,14 @@ footer .container > div{
     max-width: 200px;
     justify-content: space-evenly;
 }
-.social-icons a{
+
+.social-icons a {
     height: 44px;
     width: 44px;
 }
 
-#places_from, #places_to{
+#places_from,
+#places_to {
     display: none;
     position: absolute;
     left: 0;
@@ -302,26 +352,34 @@ footer .container > div{
     margin-left: 10px;
     margin-right: 10px;
     background-color: #fff;
-    box-shadow: 0 0 5px rgba(0,0,0,.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, .2);
     cursor: pointer;
     max-height: 70%;
     overflow: auto;
 }
-.each_places_from_list, .each_places_to_list{
+
+.each_places_from_list,
+.each_places_to_list {
     padding: 10px 15px;
     transition-duration: .2s;
 }
-.each_places_from_list:hover, .each_places_to_list:hover{
+
+.each_places_from_list:hover,
+.each_places_to_list:hover {
     background-color: #f2f2f2;
 }
-.each_places_from_list:active, .each_places_to_list:active{
+
+.each_places_from_list:active,
+.each_places_to_list:active {
     background-color: #e5e5e5;
 }
-.places_box{
+
+.places_box {
     display: none;
     cursor: pointer;
 }
-.search-flight-form-data{
+
+.search-flight-form-data {
     position: relative;
 }
 
@@ -333,12 +391,35 @@ footer .container > div{
 ::-webkit-scrollbar-track {
     background: none;
 }
+
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
+
 ::-webkit-scrollbar-thumb {
     background: #ccc;
     border-radius: 5px;
 }
 
+#chatbot-button {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: crimson;
+    background-image: linear-gradient(135deg, crimson, #b8017b);
+    color: white;
+    font-size: 28px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    transition: background-color 0.3s ease;
+}
+
+#chatbot-button:hover {
+    background-color: #b8017b;
+}
